force-app/main/default/objects/Wave_Dashboards__c/Wave_Dashboards__c.object-meta.xml
<CustomObject>
    <label>Configure Einstein Analytics Dashboard</label>
    <nameField>
        <label>Dashboard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configure Einstein Analytics Dashboard</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>