force-app/main/default/objects/Wave_Dashboards__c/fields/Dashboard_Id__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Id__c</fullName>
    <label>Dashboard Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>