force-app/main/default/objects/Wave_Dashboards__c/fields/Group_Order__c.field-meta.xml
<CustomField>
    <fullName>Group_Order__c</fullName>
    <description>Order of the tabs in each group. Allows to set an order</description>
    <inlineHelpText>Order of the tabs in each group. Allows to set an order of how user will see each tab. Can order by type or name or any way that makes sense.</inlineHelpText>
    <label>Group Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>