force-app/main/default/objects/Wave_Dashboards__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Dashboard_Id__c</columns>
    <columns>Dashboard_Group__c</columns>
    <columns>IsActive__c</columns>
    <columns>Group_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>